<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/shortShopLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageShopType"
                app:srcCompat="@drawable/ic_launcher_background"
                android:layout_width="140dp"
                android:layout_height="59dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:id="@+id/shop_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_close" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shop_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop_type" />

            <TextView
                android:id="@+id/shop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop_name" />

            <TextView
                android:id="@+id/working_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/working_hours" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>