<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/shortDiscountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageDiscount"
            android:layout_width="140dp"
            android:layout_height="59dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/discount_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discount_name" />

            <TextView
                android:id="@+id/working_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/working_days" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/old_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/old_price" />

                <TextView
                    android:id="@+id/new_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_price" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>