<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/shortShopLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageShopType"
            android:layout_width="140dp"
            android:layout_height="59dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop_name" />

            <TextView
                android:id="@+id/working_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/working_hours" />

            <TextView
                android:id="@+id/shop_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_close" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>